// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AWS Resolver returns undefined if json key string invalid 1`] = `
Array [
  "Secrets Manager can't find the specified secret.",
  "No aws secret manager value found for jsonString",
  "Secrets Manager can't find the specified secret.",
]
`;

exports[`AWS Resolver returns undefined if json string mapper invalid 1`] = `
Array [
  "Secrets Manager can't find the specified secret.",
  "No aws secret manager value found for jsonString",
]
`;

exports[`AWS Resolver returns undefined if single string invalid 1`] = `
Array [
  "Secrets Manager can't find the specified secret.",
]
`;
